--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -11,5 +11,5 @@ cutter:
     twitter: https://twitter.com/r2gui
     github: https://github.com/radareorg/cutter
     website: https://cutter.re
-    bio: This is a generic author for Cutter posts.
+    bio: The people and developers behind Cutter.
     image: /assets/images/blog/authors/cutter.png
